--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
-  "homepage": "https://koreahacks.github.io/2021-hectare/"
+  "homepage": "https://hbti.netlify.app/"
 }
